syntax = "proto3";

option csharp_namespace = "QuizMaster.API.Account.Proto";

service AccountService {
	rpc Register(RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
	int32 id = 1;
}

message RegisterResponse {
	int32 id = 1;
	string lastName= 2;
	string firstName = 3;
	string email = 4;
	string userName = 5;
	bool activeData = 6;
	string dateCreated = 7;
	string dateUpdated = 8;
	string updatedByUser = 9;
}